<resources>
    <string name="app_name">5GQos</string>
    <string name="rx_kbits_s">RX kbits/s</string>
    <string name="tx_kbits_s">TX kbits/s</string>
    <string name="na_in_android_10_plus">N/A in android 10+</string>
    <string name="na">N/A</string>
    <string name="mb_of_free_space">%1$d MB free space</string>
    <string name="device_info">DEVICE INFO</string>
    <string name="name">Name:</string>
    <string name="android">Android: </string>
    <string name="imei_sw">IMEI SW: </string>
    <string name="sim_info">SIM INFO</string>
    <string name="imsi">IMSI: </string>
    <string name="operator">Operator: </string>
    <string name="s_n">S/N: </string>
    <string name="sd_card">SD card: </string>
    <string name="size">Size: </string>
    <string name="file">File: </string>
    <string name="database_info">DATABASE INFO</string>
    <string name="info">EXPORTED EXCEL FILES INFO</string>
    <string name="create_session">Create Session</string>
    <string name="end_session">End Session</string>
    <string name="ping">Ping</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="database_size">%1$d KB</string>
    <string name="rsrp">RSRP</string>
    <string name="arfcn">ARFCN</string>
    <string name="rsrq">RSRQ</string>
    <string name="rssnr">RSSNR</string>
    <string name="NA">----</string>
    <string name="net_data_type">Net Data Type</string>
    <string name="mcc_mnc">MCC MNC</string>
    <string name="tac">TAC</string>
    <string name="enodeb_id">eNodeB Id</string>
    <string name="cid">CID</string>
    <string name="pci">PCI</string>
    <string name="cell_name">Cell Name</string>
    <string name="sim_net_operator">SIM/NET Operator</string>
    <string name="gps_lat_lon">GPS Lat/Lon</string>
    <string name="distance">Distance:</string>
    <string name="neighbors">Neighbors</string>
    <string name="no">No</string>
    <string name="tech">Tech</string>
    <string name="rssi">RSSI</string>
    <string name="rssi_rsrp">RSSI/RSRP</string>
    <string name="cid_psc_pci">CID/PSC/PCI</string>
    <string name="token_notification_title">Application Token</string>
    <string name="token_noti_text">Something failed while refreshing the token, please verify your network connection!</string>
    <string name="active_session_noti">Active Session</string>
    <string name="active_session_noti_text">There is an active session, please click here to return!</string>
    <string name="token_refreshed_text">Session token refreshed!</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="device_id">Device Id</string>
    <string name="export_excel">Export To Excel</string>
    <string name="go_to_excel_files">Go To Excel Files</string>
    <string name="documents_qos5g">.../Documents/QoS5G</string>
    <string name="user_info_lbl">User Info</string>
    <string name="username_txt">Username:</string>
    <string name="device_id_lbl">Device Id:</string>
    <string name="logout_txt">Logout</string>
    <string name="test_plans">Test Plans</string>
    <string name="report_unreported_tests">Report unreported tests</string>

</resources>