<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/txt_are_you_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:padding="24dp"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textSize="18sp"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/txt_are_you_sure"
        app:layout_constraintBottom_toTopOf="@id/session_delete_cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/session_delete_confirm_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/white_background_red_400_round_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="@string/confirm"
        android:textColor="@color/red"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/session_delete_cancel_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/white_background_blue_500_border_round_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/cancel"
        android:textColor="@color/blue_500"/>

</androidx.constraintlayout.widget.ConstraintLayout>