<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/white_background_round_20"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        android:layout_marginBottom="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/session_dates_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/start_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/start_date" />
                        <TextView
                            android:id="@+id/start_date_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_marginStart="3dp"
                            android:layout_weight="1"/>
                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"/>
                        <TextView
                            android:id="@+id/end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/end_date"/>
                        <TextView
                            android:id="@+id/end_date_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_marginStart="3dp"
                            android:layout_weight="1"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/session_details_throughput_chart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintTop_toBottomOf="@id/session_dates_layout"
                        />
                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/session_details_serving_cell_chart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/session_details_throughput_chart"
                        />
                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/session_details_strongest_neighbor_chart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/session_details_serving_cell_chart"
                        />
                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/session_details_nr_cells_same_tech_serving_cell"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/session_details_strongest_neighbor_chart"
                        />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_white_background_blue_500_border_round_20"
        android:textColor="@color/blue_500"
        android:text="@string/back"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_export_excel"
        android:layout_width="140dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        android:background="@drawable/white_background_gradient_blue_500_red_blue_500_border_round_20"
        android:text="@string/export_excel"
        android:textColor="@color/purple_700"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_white_background_blue_500_border_round_20"
        android:text="@string/delete"
        android:textColor="@color/purple_700"
        />
</androidx.constraintlayout.widget.ConstraintLayout>